fix: footer overflow on small screen size

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,4 +59,5 @@ html, body {
   scrollbar-width: thin;
   scrollbar-color: #2e4365 transparent;
   scrollbar-gutter: stable;
+  border: 1px solid blue;
 }
